--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ body{background:var(--bg);color:var(--text);font-family:'Syne',sans-serif;font-w
     <a class="nav-item" onclick="showSection('collabora',this)"><span class="nav-icon">🤝</span> Collabora &amp; Segnala</a>
     <div class="nav-section-label" style="margin-top:8px;">Link Rapidi</div>
     <a class="nav-item" href="https://pvp.giustizia.it" target="_blank"><span class="nav-icon">🔗</span> PVP Giustizia</a>
-    <a class="nav-item" href="https://www.ivg.it" target="_blank"><span class="nav-icon">🔗</span> IVG.it</a>
+    <a class="nav-item" href="https://www.ivgbologna.it/" target="_blank"><span class="nav-icon">🔗</span> IVG.it</a>
     <a class="nav-item" href="https://www.immobiliare.it/aste/" target="_blank"><span class="nav-icon">🔗</span> Immobiliare.it</a>
     <div id="admin-nav-wrap" style="display: none;">
       <div class="nav-section-label" style="margin-top:8px;">Amministrazione</div>
