--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ body{background:var(--bg);color:var(--text);font-family:'Syne',sans-serif;font-w
       <div class="portal-desc">Portale specializzato in aste giudiziarie e volontarie. Alert email su nuove aste per zona.</div>
       <div class="portal-meta"><span class="meta-tag">🇮🇹 Nazionale</span><span class="meta-tag">Specializzato</span><span class="meta-tag">Alert Email</span></div>
       <div class="portal-actions">
-        <a class="portal-link" href="https://www.gazzettaaste.it" target="_blank">↗ Apri Sito</a>
+        <a class="portal-link" href="https://www.sific.it/" target="_blank">↗ Apri Sito</a>
         
         <span class="portal-link-note" onclick="toggleNote(this)">✏️ Note</span>
         
